# nakazasen-ai-router

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  README.vi.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: dashboard_static.md  dashboard_static.vi.md  install_update.md  install_update.vi.md  integration_blueprints.md  integration_blueprints.vi.md  integration_generic_worker.md  integration_generic_worker.vi.md  integration_translation_worker.md  integration_translation_worker.vi.md  job_queue.md  job_queue.vi.md  live_conformance.md  live_conformance.vi.md  metrics.md  metrics.vi.md  path_hygiene.md  path_hygiene.vi.md  provider_keys.example.env  provider_keys.md  provider_keys.vi.md  public_api.md  quota_policy.md  quota_policy.vi.md  releasing.md  releasing.vi.md  sdk_integration.md  sdk_integration.vi.md  segmentation.md  segmentation.vi.md  use_cases.md  use_cases.vi.md
docs/audit/: GATE14_7_CODE_QUALITY_AUDIT.md  GATE14_8_PERFORMANCE_AUDIT.md
docs/design/: AIOS_PRIVACY_POLICY_ADAPTER.md
docs/releases/: 0.2.1.md  0.2.2.md  0.2.3.md  0.3.0.md  0.4.0.md
docs/research/: GATE13_AI_GATEWAY_RESEARCH.md
docs/vi/: OPERATION_RULES.vi.md  QUICKSTART.vi.md  ROADMAP.vi.md  SECURITY_AND_PRIVACY.vi.md
examples/: content_generation_demo.py  job_queue_worker_demo.py  json_extraction_demo.py  quota_policy_demo.py  sdk_worker_stack_demo.py  segmented_batch_demo.py  summarization_batch_demo.py  translation_worker_demo.py
examples/dashboard_static/: app.js  index.html  sample_metrics.json  styles.css
examples/key_setup_static/: app.js  index.html  styles.css
scripts/: audit_docs_quality.py  audit_local_paths.py  audit_positioning.py  audit_text_encoding.py  benchmark_router.py  discover_models.py  health_scoreboard.py  install_smoke.py  key_setup.py  live_conformance.py  live_smoke.py  release_check.py  router_metrics.py
src/nakazasen_ai_router/: __init__.py  aliases.py  capabilities.py  cli.py  config.py  core.py  discovery.py  fake_providers.py  free_tier_catalog.py  free_tiers.py  http.py  jobs.py  metrics.py  quota.py  registry.py  routing.py  scoreboard.py  segmentation.py  state.py  storage_sqlite.py  updates.py
src/nakazasen_ai_router/providers/: __init__.py  openai_compatible.py
tests/: test_aliases.py  test_capabilities.py  test_dashboard_static.py  test_deepseek_provider.py  test_discovery.py  test_docs_quality.py  test_env_config.py  test_free_tiers.py  test_gemini_provider.py  test_jobs.py  test_live_conformance.py  test_live_smoke.py  test_live_strategy.py  test_local_path_leaks.py  test_metrics.py  test_multi_domain_examples.py  test_openai_compatible_provider.py  test_positioning_audit.py  test_provider_key_onboarding.py  test_public_api.py  test_quota.py  test_router.py  test_scoreboard.py  test_segmentation.py  test_sqlite_state_store.py  test_text_encoding_audit.py  test_translation_worker_demo.py  test_transports.py  test_updates.py
