[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nakazasen-ai-router"
version = "0.1.0"
description = "Nen mong Provider Router cho Nakazasen, chua goi AI that."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Nakazasen" }]
license = "MIT"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
