[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nakazasen-ai-router"
version = "0.2.2"
description = "Embeddable Python AI provider router with token-pool state, async support, and durable routing outcomes."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Nakazasen" }]
license = "MIT"
keywords = ["ai", "llm", "router", "provider", "token-pool", "async", "translation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Nakazasen/nakazasen-ai-router"
Repository = "https://github.com/Nakazasen/nakazasen-ai-router"
Issues = "https://github.com/Nakazasen/nakazasen-ai-router/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "build>=1"]
async = ["httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
